# nlp_trabajo_final

./: .gitignore  README.md  REPOSITORY_SUMMARY.md  THE_STORY_OF_THIS_REPO.md  diff.patch  fix_nb3.py  fix_notebook.py  instructions.md  modify_notebook.py  modify_notebook_distilbert.py  pyproject.toml  pyproject.toml.rej  split_notebook.py  test_infer.py  test_sample.py
data/: README.md
doc/: Consigna TIF.docx  Consigna TIF.json  Consigna TIF.md  consigna_context.md  plan_cierre.md  project_management.md  project_phase_plan.md  revision_estado_repo_2026-04-26.md  skill_audit_shortlist.md  spec_presentacion_html_final.md  template_presentacion_final_nlp_inmobiliario.md  transformer_contingencia.md
notebooks/: 00_cpu_shared_cleaning.py  00_fase_0_auditoria_cpu.ipynb  01_fases_1_a_3_corpus_y_svm.ipynb  02_fase_4_transformer_cpu.ipynb  03_fase_5_comparacion_y_explicabilidad.ipynb
src/: __init__.py  api_local.py  artefactos_modelos.py  configuracion_proyecto.py  corpus_inmuebles.py  evaluacion_modelos.py  infraestructura_cpu.py  property_text_pipeline.py  resultados_finales.py  transformer_cpu.py
src/static/: presentacion.css  presentacion.html  presentacion.js
src/static/assets/presentacion/: tabla_df_res_notebook01.html  (+1 more)
tests/: test_artefactos_y_api.py  test_property_text_pipeline.py  test_transformer_cpu.py
tools/: README.md
tools/manual_checks/: benchmark_final_cpu.py
tools/metricas_estaticas/: usar_metricas_estaticas.py
tools/notebook_maintenance/: add_cells.py  debug_transformer_notebook.py  sanitizar_notebooks_finales.py
