[project]
name = "nlp-trabajo-final"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.5",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "ipykernel>=6.29.5",
    "psutil>=6.1.0",
    "torch>=2.5.1",
    "transformers>=4.46.3",
    "transformers-interpret>=0.10.0",
    "uvicorn>=0.32.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
